@@ -28,6 +28,20 @@ public class OrderedEntrySetIteratorTest {
     assertTrue(setIter instanceof OrderedEntrySetIterator);
   }
 
+  @Test(expected = NullPointerException.class)
+  public void testConstructorException1() {
+    setIter =
+        new OrderedEntrySetIterator<String, Integer>(null, rh("c", 3, "b", 2,
+            "a", 1));
+  }
+
+  @Test(expected = NullPointerException.class)
+  public void testConstructorException2() {
+    setIter =
+        new OrderedEntrySetIterator<String, Integer>(ra("a", "b", "c")
+            .iterator(), null);
+  }
+
   @Test
   public void testHasNext() {
     assertTrue(setIter.hasNext());
