@@ -1,10 +1,10 @@
 package net.sf.rubycollect4j.succ;
 
-import org.junit.Test;
-
 import static net.sf.rubycollect4j.RubyCollections.date;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
+
+import org.junit.Test;
 
 public class DateSuccessorTest {
 
