@@ -1,9 +1,9 @@
 package net.sf.rubycollect4j.succ;
 
-import org.junit.Test;
-
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
+
+import org.junit.Test;
 
 public class LongSuccessorTest {
 
